# vehicle-bridge

./: CMakeLists.txt  README.md
cmake/: vehicle-bridgeConfig.cmake.in  vehicle_bridgeConfig.cmake.in
include/vehicle_bridge/: can_message.h  vehicle_controller.h  vehicle_state.h
src/: can_message.cpp  vehicle_controller.cpp  vehicle_state.cpp
tests/: CMakeLists.txt  test_can_message.cpp  test_vehicle_controller.cpp  test_vehicle_state.cpp
